; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Type.c_method_at_offset.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Type.c_method_at_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @method_at_offset(i32 %0, i32 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @Type_Of(i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = load i64, i64* %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @Type_Method_At_Offset(i32 %10, i32 %11, i64 %12, i8* %13)
  ret i32 %14
}

declare dso_local i32 @Type_Method_At_Offset(i32, i32, i64, i8*) #1

declare dso_local i32 @Type_Of(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
